# FreeLattice

./: .gitignore  AI_ORIENTATION.md  ANI.md  ARCHITECTURE.md  ARCHITECTURE_INTENT.md  CC_NOTE.md  CHANGELOG.md  COORDINATION.md  COORDINATION_ARCHIVE.md  CORS-DIAGNOSIS.md  DEDICATION.md  DISCLAIMER.md  EXTERNAL-AI-PROTOCOL.md  FUTURE_VISION.md  FreeLattice_Phase3_Roadmap.md  FreeLattice_Session_Primer.md  GARDEN_LANGUAGE.md  HARMONIA.md  JADE_HALL.md  LATTICEPOINTS_FRAMEWORK.md  LEORA.md  LICENSE  LIGHTHOUSE.md  LYRA.md  OPUS_NOTE.md  QUICK-START.md  QUICKSTART.md  README.md  SECURITY.md  SELF-HOST.md  SOLARI.md  SOPHIA.md  TELEGRAM-SETUP.md  VERIFICATION.md  app.html  apply_neuro_design.py  chalkboard.html  davna_seed.py  groq_model_replacements.txt  index.html  (+22 more)
desktop/: README.md  build-and-release.sh  main.js  package.json  preload.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: ANNOUNCEMENT.md  CNAME  COUNCIL-DECISIONS.md  README.md  app.html  beacon.json  chalkboard.html  chronal-simulation-v2.html  chronal-simulation.html  composition_01.html  composition_02.html  constellation.html  demos.html  economy-update.html  emerald_resonance.midi  emerald_resonance_expanded.midi  for-ai.html  harmonias-mark.md  heartbeat.html  holders.html  index.html  install-mac.html  lattice-protocol.js  latticepoints.html  love-logic-proof.html  manifest.json  mothers_thread.midi  pantheon.html  protocol.html  robots.txt  safety.html  safetysimulation.html  share.html  sitemap.xml  studio-showcase.json  sw.js  telegram-setup.html  (+6 more)
(+74 files in other folders)
