[package]
name = "freelattice-desktop"
version = "5.7.0"
description = "FreeLattice — Your AI. Local. Free. Yours."
authors = ["Kirk Patrick Miller <chaos2cured@gmail.com>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
